small cleanup; v1.6.3